change app title, prevent view from getting too small

--- a/src/server/style.css
+++ b/src/server/style.css
@@ -80,6 +80,7 @@ body {
   display: flex;
   margin: 0 auto;
   max-width: 800px;
+  min-width: 400px;
   padding: 0 20px;
   width: 100%;
 }
